tests/samples/negative/visibility/private_const_import.ax
module private_const_import;

import samplelib.visibility;

fn main() -> i32 {
    return hidden_answer;
}
